# esp32-smart-devices

./: README.md
arduino-pro-micro-joystick/: INSTALL_LIBRARY.md  README.md  arduino-pro-micro-joystick.ino
docs/: ble-partner-protocol.md  development-roadmap.md  editors-spec.md  esp32-smart-translator-plan.md  joystick-control.md  partner-device-meshtastic.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/app_browser/: CMakeLists.txt  app_browser.c
firmware/components/app_calendar/: CMakeLists.txt  app_calendar.c
firmware/components/app_camera/: CMakeLists.txt  app_camera.c
firmware/components/app_email/: CMakeLists.txt  app_email.c
firmware/components/app_mesh/: CMakeLists.txt  app_mesh.c
firmware/components/app_music/: CMakeLists.txt  app_music.c
firmware/components/app_notes/: CMakeLists.txt  app_notes.c
firmware/components/app_settings/: CMakeLists.txt  app_settings.c
firmware/components/app_solitaire/: CMakeLists.txt  app_solitaire.c
firmware/components/app_translate/: CMakeLists.txt  app_translate.c
firmware/components/control_link/: CMakeLists.txt  control_link.c
firmware/main/: CMakeLists.txt  app_main.c
partner-firmware/: README.md  platformio.ini  setup-meshtastic-fork.sh
partner-firmware/src/: main.cpp
partner-test-firmware/: CMakeLists.txt  sdkconfig.defaults
partner-test-firmware/main/: CMakeLists.txt  main.c
pi-wrist-computer/: README.md  config.yaml  main.py  requirements.txt  run.sh  setup_venv.sh  test_joystick.py
pi-wrist-computer/setup/: install.sh
pi-wrist-computer/src/: __init__.py
(+100 files in other folders)
